--- a/index.html
+++ b/index.html
@@ -9,8 +9,26 @@
     <link rel="stylesheet" href="assets/css/settings/settings.css">
     <link rel="stylesheet" href="assets/css/generic/reset.css">
     <link rel="stylesheet" href="assets/css/base/initialize.css">
+    <link rel="stylesheet" href="assets/css/components/dooutss-header.css">
+    <link rel="stylesheet" href="assets/css/components/dooutss-logo.css">
+    <link rel="stylesheet" href="assets/css/components/dooutss-navigation.css">
   </head>
   <body>
-
+    <header class="dooutss-header">
+      <a class="dooutss-logo" href="#"><img class="logo" src="assets/img/Logo_1.png" alt="Dooutss System Web Devs "></a>
+      <nav class="dooutss-navigation">
+        <ul class="items">
+          <li class="item">
+            <a class="action -active" href="#sobre">Sobre</a>
+          </li>
+          <li class="item">
+            <a class="action" href="#screenshot">Screenshot</a>
+          </li>
+          <li class="item">
+            <a class="action" href="#contato">Contato</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
