menu finalizado GLoria a deuxxxx

--- a/index.html
+++ b/index.html
@@ -4,19 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Dooutss System Web Devs </title>
+    <title>Dooutss System Web Devs</title>
     <!-- Font & Css -->
-    <link rel="stylesheet" href="assets/css/settings/settings.css">
-    <link rel="stylesheet" href="assets/css/generic/reset.css">
-    <link rel="stylesheet" href="assets/css/base/initialize.css">
-    <link rel="stylesheet" href="assets/css/components/dooutss-header.css">
-    <link rel="stylesheet" href="assets/css/components/dooutss-logo.css">
-    <link rel="stylesheet" href="assets/css/components/dooutss-navigation.css">
+    <link rel="stylesheet" href="assets/css/settings/settings.css" />
+    <link rel="stylesheet" href="assets/css/generic/reset.css" />
+    <link rel="stylesheet" href="assets/css/base/initialize.css" />
+    <link rel="stylesheet" href="assets/css/components/dooutss-header.css" />
+    <link rel="stylesheet" href="assets/css/components/dooutss-logo.css" />
+    <link
+      rel="stylesheet"
+      href="assets/css/components/dooutss-navigation.css"
+    />
   </head>
   <body>
     <header class="dooutss-header">
-      <a class="dooutss-logo" href="#"><img class="logo" src="assets/img/Logo_1.png" alt="Dooutss System Web Devs "></a>
-      <nav class="dooutss-navigation">
+      <a class="dooutss-logo" href="#"
+        ><img
+          class="logo"
+          src="assets/img/Logo_1.png"
+          alt="Dooutss System Web Devs "
+      /></a>
+
+      <div id="menuToogle" class="menuToogle">
+        <h5 class="mobile">Menu</h5>
+        <span class="bar"></span>
+      </div>
+
+      <nav id="dooutss-navigation" class="dooutss-navigation">
         <ul class="items">
           <li class="item">
             <a class="action -active" href="#sobre">Sobre</a>
@@ -24,11 +38,11 @@
           <li class="item">
             <a class="action" href="#screenshot">Screenshot</a>
           </li>
-          <li class="item">
-            <a class="action" href="#contato">Contato</a>
-          </li>
+          <li class="item"><a class="action" href="#contato">Contato</a></li>
         </ul>
       </nav>
     </header>
+
+    <script src="assets/js/components/dooutss-navegatios.js"></script>
   </body>
 </html>
