--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>Dooutss System Web Devs</title>
     <!-- Font & Css -->
-    <link rel="stylesheet" href="assets/css/settings/settings.css" />
-    <link rel="stylesheet" href="assets/css/generic/reset.css" />
-    <link rel="stylesheet" href="assets/css/base/initialize.css" />
-    <link rel="stylesheet" href="assets/css/components/dooutss-header.css" />
+    <link rel="stylesheet" href="assets/css/settings/settings.css"/>
+    <link rel="stylesheet" href="assets/css/generic/reset.css"/>
+    <link rel="stylesheet" href="assets/css/base/initialize.css"/>
+
+    <link rel="stylesheet" href="assets/css/components/dooutss-header.css"/>
     <link rel="stylesheet" href="assets/css/components/dooutss-logo.css" />
-    <link
-      rel="stylesheet"
-      href="assets/css/components/dooutss-navigation.css"
-    />
+    <link rel="stylesheet" href="assets/css/components/dooutss-navigation.css"/>
+    <link rel="stylesheet" href="assets/css/components/dooutss-information.css"/>
+    <link rel="stylesheet" href="assets/css/components/wrapper-information.css"/>
+    <link rel="stylesheet" href="assets/css/components/wrapper-social.css"/>
+    <link rel="stylesheet" href="assets/css/components/wrapper-imagens.css"/>
   </head>
   <body>
     <header class="dooutss-header">
@@ -42,7 +44,40 @@
         </ul>
       </nav>
     </header>
-
+    <section class="dooutss-information">
+      <div class="wrapper-information">
+        <h1 class="title">Quer esclarecer sua dúvida de maneira fácil?</h1>
+        <h2 class="subtitle">
+          Dado o fluxo de dados atual, o gerenciador de dependências do frontend
+          corrigiu o bug de uma configuração Webpack eficiente nos builds.
+        </h2>
+        <a class="btn" href="#">Entre em contato quando quiser</a>
+        <ul class="wrapper-social">
+          <li class="networks">
+            <a class="social facebook" href="#">facebook</a>
+          </li>
+          <li class="networks">
+            <a class="social twitter" href="#">faceboox</a>
+          </li>
+          <li class="networks">
+            <a class="social dribble" href="#">faceboox</a>
+          </li>
+          <li class="networks">
+            <a class="social instragam" href="#">faceboox</a>
+          </li>
+        </ul>
+      </div>
+      <div class="wrapper-imagens">
+        <div class="imagens">
+          <img src="assets/img/mockup-1.png" alt="" />
+          <img src="assets/img/mcokup-2.png" alt="" />
+        </div>
+        <ul class="item">
+          <li class="items"><i class="circle"></i></li>
+          <li class="items"><i class="circle"></i></li>
+        </ul>
+      </div>
+    </section>
     <script src="assets/js/components/dooutss-navegatios.js"></script>
   </body>
 </html>
