--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>Dooutss System Web Devs</title>
     <!-- Font & Css -->
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/settings/settings.css"/>
     <link rel="stylesheet" href="assets/css/generic/reset.css"/>
     <link rel="stylesheet" href="assets/css/base/initialize.css"/>
@@ -16,7 +17,7 @@
     <link rel="stylesheet" href="assets/css/components/dooutss-information.css"/>
     <link rel="stylesheet" href="assets/css/components/wrapper-information.css"/>
     <link rel="stylesheet" href="assets/css/components/wrapper-social.css"/>
-    <link rel="stylesheet" href="assets/css/components/wrapper-imagens.css"/>
+    <link rel="stylesheet" href="assets/css/components/wrapper-images.css"/>
   </head>
   <body>
     <header class="dooutss-header">
@@ -67,7 +68,7 @@
           </li>
         </ul>
       </div>
-      <div class="wrapper-imagens">
+      <div class="wrapper-images">
         <div class="imagens">
           <img src="assets/img/mockup-1.png" alt="" />
           <img src="assets/img/mcokup-2.png" alt="" />
