finalizando css info

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           Dado o fluxo de dados atual, o gerenciador de dependências do frontend
           corrigiu o bug de uma configuração Webpack eficiente nos builds.
         </h2>
-        <a class="btn" href="#">Entre em contato quando quiser</a>
+        <a class="btn" href="#">Entre em contato quando quiser  <i class="icon"></i></a>
         <ul class="wrapper-social">
           <li class="networks">
             <a class="social facebook" href="#">facebook</a>
