--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@
         <a class="btn" href="#">Entre em contato quando quiser  <i class="icon"></i></a>
         <ul class="wrapper-social">
           <li class="networks">
-            <a class="social facebook" href="#">facebook</a>
+            <a class="social -facebook" href="#">facebook</a>
           </li>
           <li class="networks">
-            <a class="social twitter" href="#">faceboox</a>
+            <a class="social -twitter" href="#">faceboox</a>
           </li>
           <li class="networks">
-            <a class="social dribble" href="#">faceboox</a>
+            <a class="social -dribble" href="#">faceboox</a>
           </li>
           <li class="networks">
-            <a class="social instragam" href="#">faceboox</a>
+            <a class="social -instragam" href="#">faceboox</a>
           </li>
         </ul>
       </div>
