--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
         </h2>
         <a class="btn" href="#">Entre em contato quando quiser  <i class="icon"></i></a>
         <ul class="wrapper-social">
-          <li class="networks">
+          <li class="networks -facebook">
             <a class="social -facebook" href="#"></a>
           </li>
-          <li class="networks">
+          <li class="networks -twitter">
             <a class="social -twitter" href="#"></a>
           </li>
-          <li class="networks">
+          <li class="networks -dribble">
             <a class="social -dribble" href="#"></a>
           </li>
-          <li class="networks">
+          <li class="networks -instragam">
             <a class="social -instragam" href="#"></a>
           </li>
         </ul>
