--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
         </ul>
       </div>
       <div class="wrapper-images">
-        <div class="imagens">
-          <img src="assets/img/mockup-1.png" alt="" />
-          <img src="assets/img/mcokup-2.png" alt="" />
+        <div class="wrapper ">
+          <img class="imagens" src="assets/img/mockup-1.png" alt="" />
+          <img class="imagens -mcokup"  src="assets/img/mcokup-2.png" alt="" />
         </div>
         <ul class="item">
           <li class="items"><i class="circle"></i></li>
